--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
                 layout: 'timeline',
                 title: "流程",
                 steps: [
-                    { phase: "Part 1 (上午)", title: "Web3 金流基礎建設", desc: "錢包實戰與私鑰管理、加密貨幣收發體驗", icon: <IconWallet /> },
-                    { phase: "Part 2 (上午)", title: "重大風險與資安拆解", desc: "交易授權陷阱分析、交易所與駭客案例", icon: <IconShield /> },
-                    { phase: "Part 3 (下午)", title: "鏈上金流與獲利邏輯", desc: "DeFi 與穩定幣套利、資金流向追蹤判讀", icon: <IconChart /> },
-                    { phase: "Part 4 (下午)", title: "Web3 商業應用", desc: "跨境支付與穩定幣結算、支付卡與鏈上隱私工具", icon: <IconWallet /> }
+                    { phase: "Part 1", title: "Web3 金流基礎建設", desc: "錢包實戰與私鑰管理、加密貨幣收發體驗", icon: <IconWallet /> },
+                    { phase: "Part 2", title: "重大風險與資安拆解", desc: "交易授權陷阱分析、交易所與駭客案例", icon: <IconShield /> },
+                    { phase: "Part 3", title: "鏈上金流與獲利邏輯", desc: "DeFi 與穩定幣套利、資金流向追蹤判讀", icon: <IconChart /> },
+                    { phase: "Part 4", title: "Web3 商業應用", desc: "跨境支付與穩定幣結算、支付卡與鏈上隱私工具", icon: <IconWallet /> }
                 ]
             },
             {
