--- a/index.html
+++ b/index.html
@@ -97,42 +97,17 @@
             },
             {
                 id: 3,
-                layout: 'detail',
-                tag: "我的故事",
-                title: "我為什麼在這？",
-                content: (
-                    <div className="space-y-6 flex flex-col h-full justify-center">
-                        <p className="text-2xl md:text-3xl font-bold text-slate-800">
-                            一開始，我也不相信。
-                        </p>
-                        <div className="space-y-4 text-lg md:text-xl text-slate-600">
-                            <p>為什麼開始接觸加密貨幣與區塊鏈？</p>
-                            <p>為什麼把這當成全職工作？</p>
-                            <p className="text-slate-500 italic">用我的故事來說。</p>
-                        </div>
-                    </div>
-                )
-            },
-            {
-                id: 4,
                 layout: 'split',
-                title: "2017 年 8 月：朋友來我家放以太幣礦機",
+                tag: "我的故事",
+                title: "我也不信",
                 leftContent: (
-                    <div className="space-y-4">
-                        <div className="aspect-video bg-slate-100 rounded-2xl border-2 border-slate-200 flex items-center justify-center overflow-hidden">
-                            {/* 可替換 src 為你的礦機照片網址 */}
-                            <img src="https://images.unsplash.com/photo-1639762681485-074b7f938ba0?w=600&h=400&fit=crop" alt="以太坊礦機" className="w-full h-full object-cover rounded-2xl" />
-                        </div>
-                        <p className="text-sm text-slate-500">當年的礦機長這樣</p>
+                    <div className="aspect-video bg-slate-100 rounded-2xl border-2 border-slate-200 flex items-center justify-center overflow-hidden">
+                        <img src="https://duk.tw/suK7fD.png" alt="以太坊礦機" className="w-full h-full object-contain rounded-2xl" />
                     </div>
                 ),
                 rightContent: (
-                    <div className="space-y-6">
-                        <p className="text-lg md:text-xl text-slate-700 leading-relaxed">
-                            有朋友來我家，放了一台以太幣礦機。
-                        </p>
-                        <p className="text-lg text-slate-600">那時候的挖礦是什麼樣子？</p>
-                        <p className="text-lg text-slate-600">這就是我開始接觸區塊鏈的起點。</p>
+                    <div className="aspect-video bg-slate-100 rounded-2xl border-2 border-slate-200 flex items-center justify-center overflow-hidden">
+                        <img src="https://duk.tw/suK7fD.png" alt="當年照片" className="w-full h-full object-contain rounded-2xl" />
                     </div>
                 )
             },
@@ -412,7 +387,10 @@
                         return (
                             <div className="flex flex-col md:flex-row h-full px-4 md:px-10 py-6 md:py-10 gap-6 md:gap-12 overflow-hidden items-center">
                                 <div className="flex-1 flex flex-col justify-center min-h-min w-full">
-                                    <h2 className="text-2xl md:text-5xl font-bold text-slate-800 mb-6 md:mb-8 border-l-8 border-amber-500 pl-6">{slide.title}</h2>
+                                    <div className="flex flex-col md:flex-row md:items-center gap-4 md:gap-6 mb-6 md:mb-8">
+                                        {slide.tag && <span className="self-start md:self-auto bg-amber-500 text-white px-4 py-2 rounded-lg text-base md:text-lg font-bold shadow-md">{slide.tag}</span>}
+                                        <h2 className="text-2xl md:text-5xl font-bold text-slate-800 border-l-8 border-amber-500 pl-6">{slide.title}</h2>
+                                    </div>
                                     <div className="pr-2">{slide.leftContent}</div>
                                 </div>
                                 <div className="flex-1 flex flex-col justify-center bg-slate-50 rounded-3xl p-6 md:p-8 w-full h-full max-h-[500px]">
