--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         const { useState, useEffect, useCallback } = React;
 
         const IconArrowRight = () => (
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2.5" strokeLinecap="round" strokeLinejoin="round"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg>
         );
         const IconArrowLeft = () => (
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="m12 19-7-7 7-7"/><path d="M19 12H5"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2.5" strokeLinecap="round" strokeLinejoin="round"><path d="m12 19-7-7 7-7"/><path d="M19 12H5"/></svg>
         );
         const IconBitcoin = () => (
             <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#f59e0b" strokeWidth="1.5" strokeLinecap="round" strokeLinejoin="round"><path d="M12 2v20M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/></svg>
@@ -590,47 +590,47 @@
                         </div>
                     </main>
 
-                    {/* 固定的底部橫條 */}
-                    <div className="w-full h-16 md:h-20 bg-white border-t border-slate-200 flex items-center justify-between px-4 md:px-8 z-50 shadow-[0_-4px_15px_rgba(0,0,0,0.03)] shrink-0">
+                    {/* 固定的底部橫條 (已壓扁並縮小元素) */}
+                    <div className="w-full h-12 md:h-14 bg-white border-t border-slate-200 flex items-center justify-between px-3 md:px-6 z-50 shadow-[0_-4px_15px_rgba(0,0,0,0.03)] shrink-0">
                         {/* 左側：提問按鈕與品牌資訊 */}
-                        <div className="flex items-center gap-3 md:gap-5">
+                        <div className="flex items-center gap-2 md:gap-4">
                             {slides[0]?.slidoUrl && (
-                                <a href={slides[0].slidoUrl} target="_blank" rel="noopener noreferrer" className="inline-flex items-center gap-2 px-4 py-2 md:px-5 md:py-2.5 bg-indigo-600 hover:bg-indigo-700 text-white font-bold text-sm md:text-base rounded-full shadow-md transition-all hover:scale-105 shrink-0">
+                                <a href={slides[0].slidoUrl} target="_blank" rel="noopener noreferrer" className="inline-flex items-center gap-1.5 px-3 py-1.5 md:px-4 md:py-1.5 bg-indigo-600 hover:bg-indigo-700 text-white font-bold text-xs md:text-sm rounded-full shadow-sm transition-all hover:scale-105 shrink-0">
                                     即時提問 →
                                 </a>
                             )}
                             <span className="text-slate-300 hidden md:block">|</span>
-                            <span className="font-bold text-slate-800 tracking-tight text-sm md:text-lg hidden md:block">
+                            <span className="font-bold text-slate-800 tracking-tight text-xs md:text-sm hidden md:block">
                                 企業 Web3 工作坊
                             </span>
                             <span className="text-slate-300 hidden lg:block">|</span>
-                            <span className="font-bold text-slate-500 tracking-tight text-sm md:text-lg hidden lg:block">
+                            <span className="font-bold text-slate-500 tracking-tight text-xs md:text-sm hidden lg:block">
                                 區塊勢 <span className="text-slate-300 mx-1">×</span> Dinngo
                             </span>
                         </div>
 
                         {/* 右側：頁碼、進度條與方向控制 */}
-                        <div className="flex items-center gap-4 md:gap-6">
-                            <div className="font-mono text-sm md:text-base font-bold tracking-widest text-slate-500">
+                        <div className="flex items-center gap-3 md:gap-5">
+                            <div className="font-mono text-xs md:text-sm font-bold tracking-widest text-slate-500">
                                 <span className="text-amber-500">{currentSlide + 1}</span><span className="mx-1">/</span>{slides.length}
                             </div>
                             
-                            <div className="flex items-center gap-2 md:gap-4">
+                            <div className="flex items-center gap-1 md:gap-2">
                                 <button onClick={prevSlide}
-                                    className="p-2 md:p-2.5 rounded-full transition-all transform hover:scale-105 text-slate-600 bg-slate-100 hover:bg-slate-200 hover:text-slate-900 active:bg-slate-300">
+                                    className="p-1.5 md:p-2 rounded-full transition-all transform hover:scale-105 text-slate-600 bg-slate-100 hover:bg-slate-200 hover:text-slate-900 active:bg-slate-300">
                                     <IconArrowLeft />
                                 </button>
                                 
                                 {/* 桌面版進度條 */}
-                                <div className="hidden lg:flex gap-2 items-center mx-2">
+                                <div className="hidden lg:flex gap-1.5 items-center mx-2">
                                     {slides.map((_, idx) => (
                                         <button key={idx} onClick={() => setCurrentSlide(idx)}
-                                            className={`h-2 rounded-full transition-all duration-300 ${idx === currentSlide ? 'bg-amber-500 w-8' : 'bg-slate-300 w-2 hover:bg-slate-400 hover:scale-125'}`} />
+                                            className={`h-1.5 rounded-full transition-all duration-300 ${idx === currentSlide ? 'bg-amber-500 w-6' : 'bg-slate-300 w-1.5 hover:bg-slate-400 hover:scale-125'}`} />
                                     ))}
                                 </div>
 
                                 <button onClick={nextSlide}
-                                    className="p-2 md:p-2.5 rounded-full transition-all transform hover:scale-105 text-slate-600 bg-slate-100 hover:bg-slate-200 hover:text-slate-900 active:bg-slate-300">
+                                    className="p-1.5 md:p-2 rounded-full transition-all transform hover:scale-105 text-slate-600 bg-slate-100 hover:bg-slate-200 hover:text-slate-900 active:bg-slate-300">
                                     <IconArrowRight />
                                 </button>
                             </div>
