--- a/index.html
+++ b/index.html
@@ -140,45 +140,41 @@
                             {/* 卡片層 */}
                             <div className="flex flex-col md:flex-row w-full items-center justify-between gap-4 z-10 relative">
                                 {/* 1. 礦機 */}
-                                <div className="flex flex-col items-center justify-center p-6 bg-white rounded-2xl border-2 border-slate-200 w-full md:w-[22%] aspect-[4/3] md:aspect-square relative z-10 shadow-sm transition-transform hover:-translate-y-1">
-                                    <span className="text-4xl md:text-5xl mb-3">🖥️</span>
-                                    <p className="font-bold text-base md:text-lg text-slate-800">礦機運作</p>
-                                    <p className="text-xs md:text-sm text-slate-500 mt-1">消耗電力與算力</p>
+                                <div className="flex flex-col items-center justify-center p-6 md:p-10 bg-white rounded-3xl border-2 border-slate-200 w-full md:w-[22%] aspect-[4/3] md:aspect-square relative z-10 shadow-sm transition-transform hover:-translate-y-2">
+                                    <span className="text-6xl md:text-7xl mb-4">🖥️</span>
+                                    <p className="font-bold text-xl md:text-2xl text-slate-800 tracking-wide text-center">礦機運作</p>
                                 </div>
                                 
-                                <span className="text-2xl text-slate-300 font-bold hidden md:block">→</span>
-                                <span className="text-2xl text-slate-300 font-bold md:hidden">↓</span>
+                                <span className="text-3xl text-slate-300 font-bold hidden md:block">→</span>
+                                <span className="text-3xl text-slate-300 font-bold md:hidden">↓</span>
 
                                 {/* 2. ETH */}
-                                <div className="flex flex-col items-center justify-center p-6 bg-blue-50 rounded-2xl border-2 border-blue-200 w-full md:w-[22%] aspect-[4/3] md:aspect-square relative z-10 shadow-sm transition-transform hover:-translate-y-1">
-                                    <span className="text-4xl md:text-5xl mb-3 font-bold text-blue-500">Ξ</span>
-                                    <p className="font-bold text-base md:text-lg text-blue-900">賺得 ETH</p>
-                                    <p className="text-xs md:text-sm text-blue-600/70 mt-1">取得挖礦獎勵</p>
+                                <div className="flex flex-col items-center justify-center p-6 md:p-10 bg-blue-50 rounded-3xl border-2 border-blue-200 w-full md:w-[22%] aspect-[4/3] md:aspect-square relative z-10 shadow-sm transition-transform hover:-translate-y-2">
+                                    <span className="text-6xl md:text-7xl mb-4 font-bold text-blue-500">Ξ</span>
+                                    <p className="font-bold text-xl md:text-2xl text-blue-900 tracking-wide text-center">賺得 ETH</p>
                                 </div>
 
-                                <span className="text-2xl text-slate-300 font-bold hidden md:block">→</span>
-                                <span className="text-2xl text-slate-300 font-bold md:hidden">↓</span>
+                                <span className="text-3xl text-slate-300 font-bold hidden md:block">→</span>
+                                <span className="text-3xl text-slate-300 font-bold md:hidden">↓</span>
 
                                 {/* 3. 交易所 */}
-                                <div className="flex flex-col items-center justify-center p-6 bg-purple-50 rounded-2xl border-2 border-purple-200 w-full md:w-[22%] aspect-[4/3] md:aspect-square relative z-10 shadow-sm transition-transform hover:-translate-y-1">
-                                    <span className="text-4xl md:text-5xl mb-3">🏛️</span>
-                                    <p className="font-bold text-base md:text-lg text-purple-900">中心化交易所</p>
-                                    <p className="text-xs md:text-sm text-purple-600/70 mt-1">ETH 換成新台幣</p>
+                                <div className="flex flex-col items-center justify-center p-6 md:p-10 bg-purple-50 rounded-3xl border-2 border-purple-200 w-full md:w-[22%] aspect-[4/3] md:aspect-square relative z-10 shadow-sm transition-transform hover:-translate-y-2">
+                                    <span className="text-6xl md:text-7xl mb-4">🏛️</span>
+                                    <p className="font-bold text-xl md:text-2xl text-purple-900 tracking-wide text-center">交易所</p>
                                 </div>
 
-                                <span className="text-2xl text-slate-300 font-bold hidden md:block">→</span>
-                                <span className="text-2xl text-slate-300 font-bold md:hidden">↓</span>
+                                <span className="text-3xl text-slate-300 font-bold hidden md:block">→</span>
+                                <span className="text-3xl text-slate-300 font-bold md:hidden">↓</span>
 
                                 {/* 4. 電費 */}
-                                <div className="flex flex-col items-center justify-center p-6 bg-amber-50 rounded-2xl border-2 border-amber-200 w-full md:w-[22%] aspect-[4/3] md:aspect-square relative z-10 shadow-sm transition-transform hover:-translate-y-1">
-                                    <span className="text-4xl md:text-5xl mb-3">⚡</span>
-                                    <p className="font-bold text-base md:text-lg text-amber-900">付台電帳單</p>
-                                    <p className="text-xs md:text-sm text-amber-700/70 mt-1">支撐礦機運作</p>
+                                <div className="flex flex-col items-center justify-center p-6 md:p-10 bg-amber-50 rounded-3xl border-2 border-amber-200 w-full md:w-[22%] aspect-[4/3] md:aspect-square relative z-10 shadow-sm transition-transform hover:-translate-y-2">
+                                    <span className="text-6xl md:text-7xl mb-4">⚡</span>
+                                    <p className="font-bold text-xl md:text-2xl text-amber-900 tracking-wide text-center">付台電帳單</p>
                                 </div>
                             </div>
 
                             {/* 桌面版背景循環線 */}
-                            <div className="hidden md:block absolute top-[50%] left-[11%] right-[11%] h-[160px] border-b-4 border-l-4 border-r-4 border-slate-200 rounded-b-[2rem] z-0">
+                            <div className="hidden md:block absolute top-[50%] left-[11%] right-[11%] h-[160px] md:h-[180px] border-b-4 border-l-4 border-r-4 border-slate-200 rounded-b-[2.5rem] z-0">
                                 {/* 左側向上箭頭 (流向礦機) */}
                                 <div className="absolute left-[-13px] top-[40%] text-slate-300">
                                     <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="4" strokeLinecap="round" strokeLinejoin="round"><path d="m18 15-6-6-6 6"/></svg>
@@ -188,8 +184,8 @@
                                     <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="4" strokeLinecap="round" strokeLinejoin="round"><path d="m6 9 6 6 6-6"/></svg>
                                 </div>
                                 {/* 底部文字標籤 */}
-                                <div className="absolute bottom-[-16px] left-[50%] translate-x-[-50%] bg-white px-5 py-1.5 rounded-full text-slate-500 text-sm font-bold border-2 border-slate-200 shadow-sm flex items-center gap-2">
-                                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="3" strokeLinecap="round" strokeLinejoin="round"><path d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"/><path d="M3 3v5h5"/></svg>
+                                <div className="absolute bottom-[-18px] left-[50%] translate-x-[-50%] bg-white px-6 py-2 rounded-full text-slate-500 text-sm font-bold border-2 border-slate-200 shadow-sm flex items-center gap-2">
+                                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="3" strokeLinecap="round" strokeLinejoin="round"><path d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"/><path d="M3 3v5h5"/></svg>
                                     循環支撐運作
                                 </div>
                             </div>
@@ -202,36 +198,42 @@
                 layout: 'split',
                 tag: "轉捩點",
                 title: "比特幣白皮書",
-                leftClasses: "md:w-[45%]",
-                rightClasses: "md:w-[55%]",
+                leftClasses: "md:w-[60%] flex-shrink-0",
+                rightClasses: "md:w-[40%]",
                 leftContent: (
-                    <div className="w-full h-full min-h-[300px] bg-slate-100 rounded-2xl border-2 border-slate-200 flex items-center justify-center overflow-hidden p-2">
+                    <a href="https://bitcoin.org/bitcoin.pdf" target="_blank" rel="noopener noreferrer" className="w-full h-full min-h-[300px] md:min-h-[400px] bg-slate-100 rounded-3xl border-2 border-slate-200 flex items-center justify-center p-4 transition-transform hover:scale-[1.01] shadow-sm hover:shadow-md cursor-pointer relative group block">
                         <img src="https://duk.tw/YrkB9K.png" alt="比特幣白皮書" className="w-full h-full object-contain rounded-xl drop-shadow-sm" />
-                    </div>
+                        <div className="absolute inset-0 bg-slate-900/5 rounded-3xl opacity-0 group-hover:opacity-100 transition-opacity flex items-center justify-center">
+                            <span className="bg-white/95 text-slate-800 px-6 py-3 rounded-full font-bold shadow-lg backdrop-blur-sm text-sm flex items-center gap-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2.5" strokeLinecap="round" strokeLinejoin="round"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" y1="14" x2="21" y2="3"/></svg>
+                                閱讀白皮書原文
+                            </span>
+                        </div>
+                    </a>
                 ),
                 rightContent: (
                     <div className="h-full flex flex-col justify-center">
-                        <div className="bg-white p-6 md:p-8 rounded-3xl shadow-sm border border-slate-100">
-                            <ul className="space-y-6 text-lg md:text-xl text-slate-700">
+                        <div className="bg-white p-5 md:p-8 rounded-3xl shadow-sm border border-slate-100">
+                            <ul className="space-y-6 md:space-y-8 text-base md:text-lg text-slate-700">
                                 <li className="flex items-start">
-                                    <span className="text-amber-500 mr-4 font-bold text-2xl leading-none">🤔</span>
+                                    <span className="text-amber-500 mr-3 font-bold text-xl md:text-2xl leading-none mt-0.5">🤔</span>
                                     <div>
-                                        <strong className="text-slate-800">價值從哪來？</strong>
-                                        <div className="text-slate-500 text-base mt-1">為什麼機器的產出，能拿去換成新台幣？</div>
+                                        <strong className="text-slate-800 block text-lg md:text-xl mb-1">價值從哪來？</strong>
+                                        <span className="text-slate-500 text-sm md:text-base leading-snug block">為什麼機器的產出，能拿去換成新台幣？</span>
                                     </div>
                                 </li>
                                 <li className="flex items-start">
-                                    <span className="text-amber-500 mr-4 font-bold text-2xl leading-none">📈</span>
+                                    <span className="text-amber-500 mr-3 font-bold text-xl md:text-2xl leading-none mt-0.5">📈</span>
                                     <div>
-                                        <strong className="text-slate-800">還能賺多久？</strong>
-                                        <div className="text-slate-500 text-base mt-1">幣價大起大落，礦機要跑多久才划算？</div>
+                                        <strong className="text-slate-800 block text-lg md:text-xl mb-1">還能賺多久？</strong>
+                                        <span className="text-slate-500 text-sm md:text-base leading-snug block">幣價大起大落，礦機要跑多久才划算？</span>
                                     </div>
                                 </li>
                                 <li className="flex items-start">
-                                    <span className="text-amber-500 mr-4 font-bold text-2xl leading-none">💡</span>
+                                    <span className="text-amber-500 mr-3 font-bold text-xl md:text-2xl leading-none mt-0.5">💡</span>
                                     <div>
-                                        <strong className="text-slate-800">有什麼應用？</strong>
-                                        <div className="text-slate-500 text-base mt-1">除了挖礦賺錢，聽說還能跑「智慧合約」？</div>
+                                        <strong className="text-slate-800 block text-lg md:text-xl mb-1">有什麼應用？</strong>
+                                        <span className="text-slate-500 text-sm md:text-base leading-snug block">除了挖礦賺錢，聽說還能跑「智慧合約」？</span>
                                     </div>
                                 </li>
                             </ul>
