--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@
             {
                 id: 6,
                 layout: 'detail',
-                tag: "現在的工作",
-                title: "區塊勢 Blocktrend",
+                tag: "全職工作",
+                title: "區塊勢",
                 content: (
                     <div className="grid grid-cols-1 md:grid-cols-2 gap-6 md:gap-10 h-full items-center">
                         {/* 左側：價值主張 */}
@@ -255,8 +255,8 @@
                                 <p className="text-lg text-slate-600">每週 3 篇原創內容，把艱澀難懂的 Web3 技術，翻譯成白話文。</p>
                             </div>
                             <div className="p-6 md:p-8 bg-amber-50 rounded-3xl border border-amber-200 shadow-sm transition-transform hover:-translate-y-1">
-                                <h3 className="text-2xl font-bold text-amber-900 mb-2">網路上最有價值的 10 分鐘</h3>
-                                <p className="text-lg text-amber-800">如果你一週只有 10 分鐘能吸收加密貨幣資訊，讀區塊勢是最好的選擇。其餘時間，你可以隨意探索。</p>
+                                <h3 className="text-2xl font-bold text-amber-900 mb-2">最有價值的 10 分鐘</h3>
+                                <p className="text-lg text-amber-800">每週只需 10 分鐘，精準掌握加密貨幣與 Web3 核心精華。</p>
                             </div>
                         </div>
                         {/* 右側：視覺與訂閱資訊 */}
@@ -611,12 +611,8 @@
                             </span>
                         </div>
 
-                        {/* 右側：頁碼、進度條與方向控制 */}
+                        {/* 右側：方向控制、進度條與頁碼 */}
                         <div className="flex items-center gap-3 md:gap-5">
-                            <div className="font-mono text-xs md:text-sm font-bold tracking-widest text-slate-500">
-                                <span className="text-amber-500">{currentSlide + 1}</span><span className="mx-1">/</span>{slides.length}
-                            </div>
-                            
                             <div className="flex items-center gap-1 md:gap-2">
                                 <button onClick={prevSlide}
                                     className="p-1.5 md:p-2 rounded-full transition-all transform hover:scale-105 text-slate-600 bg-slate-100 hover:bg-slate-200 hover:text-slate-900 active:bg-slate-300">
@@ -635,6 +631,10 @@
                                     className="p-1.5 md:p-2 rounded-full transition-all transform hover:scale-105 text-slate-600 bg-slate-100 hover:bg-slate-200 hover:text-slate-900 active:bg-slate-300">
                                     <IconArrowRight />
                                 </button>
+                            </div>
+
+                            <div className="font-mono text-xs md:text-sm font-bold tracking-widest text-slate-500 border-l border-slate-200 pl-3 md:pl-5">
+                                <span className="text-amber-500">{currentSlide + 1}</span><span className="mx-1">/</span>{slides.length}
                             </div>
                         </div>
                     </div>
