--- a/index.html
+++ b/index.html
@@ -213,28 +213,19 @@
                 ),
                 rightContent: (
                     <div className="h-full flex flex-col justify-center">
-                        <div className="bg-white p-5 md:p-8 rounded-3xl shadow-sm border border-slate-100">
-                            <ul className="space-y-6 md:space-y-8 text-base md:text-lg text-slate-700">
-                                <li className="flex items-start">
-                                    <span className="text-amber-500 mr-3 font-bold text-xl md:text-2xl leading-none mt-0.5">🤔</span>
-                                    <div>
-                                        <strong className="text-slate-800 block text-lg md:text-xl mb-1">價值從哪來？</strong>
-                                        <span className="text-slate-500 text-sm md:text-base leading-snug block">為什麼機器的產出，能拿去換成新台幣？</span>
-                                    </div>
+                        <div className="bg-white p-6 md:p-10 rounded-3xl shadow-sm border border-slate-100">
+                            <ul className="space-y-10 md:space-y-12">
+                                <li className="flex items-center">
+                                    <span className="text-amber-500 mr-5 font-bold text-3xl md:text-5xl leading-none">🤔</span>
+                                    <strong className="text-slate-800 text-2xl md:text-4xl block font-bold">價值從哪來？</strong>
                                 </li>
-                                <li className="flex items-start">
-                                    <span className="text-amber-500 mr-3 font-bold text-xl md:text-2xl leading-none mt-0.5">📈</span>
-                                    <div>
-                                        <strong className="text-slate-800 block text-lg md:text-xl mb-1">還能賺多久？</strong>
-                                        <span className="text-slate-500 text-sm md:text-base leading-snug block">幣價大起大落，礦機要跑多久才划算？</span>
-                                    </div>
+                                <li className="flex items-center">
+                                    <span className="text-amber-500 mr-5 font-bold text-3xl md:text-5xl leading-none">📈</span>
+                                    <strong className="text-slate-800 text-2xl md:text-4xl block font-bold">還能挖多久？</strong>
                                 </li>
-                                <li className="flex items-start">
-                                    <span className="text-amber-500 mr-3 font-bold text-xl md:text-2xl leading-none mt-0.5">💡</span>
-                                    <div>
-                                        <strong className="text-slate-800 block text-lg md:text-xl mb-1">有什麼應用？</strong>
-                                        <span className="text-slate-500 text-sm md:text-base leading-snug block">除了挖礦賺錢，聽說還能跑「智慧合約」？</span>
-                                    </div>
+                                <li className="flex items-center">
+                                    <span className="text-amber-500 mr-5 font-bold text-3xl md:text-5xl leading-none">💡</span>
+                                    <strong className="text-slate-800 text-2xl md:text-4xl block font-bold">有什麼應用？</strong>
                                 </li>
                             </ul>
                         </div>
@@ -252,25 +243,25 @@
                         <div className="space-y-6">
                             <div className="p-6 md:p-8 bg-slate-50 rounded-3xl border border-slate-200 shadow-sm transition-transform hover:-translate-y-1">
                                 <h3 className="text-2xl font-bold text-slate-800 mb-2">說人話的區塊鏈圖文</h3>
-                                <p className="text-lg text-slate-600">每週 3 篇原創內容，把艱澀難懂的 Web3 技術，翻譯成白話文。</p>
+                                <p className="text-lg text-slate-600">每週 3 篇原創內容，把 Web3 翻譯成白話文。</p>
                             </div>
                             <div className="p-6 md:p-8 bg-amber-50 rounded-3xl border border-amber-200 shadow-sm transition-transform hover:-translate-y-1">
                                 <h3 className="text-2xl font-bold text-amber-900 mb-2">最有價值的 10 分鐘</h3>
-                                <p className="text-lg text-amber-800">每週只需 10 分鐘，精準掌握加密貨幣與 Web3 核心精華。</p>
+                                <p className="text-lg text-amber-800">透過付費訂閱制建立門檻，專為讀者省下篩選與吸收資訊的寶貴時間。</p>
                             </div>
                         </div>
                         {/* 右側：視覺與訂閱資訊 */}
                         <div className="flex flex-col items-center justify-center space-y-8">
-                            <div className="w-32 h-32 md:w-48 md:h-48 bg-indigo-50 rounded-full border-[8px] border-white shadow-xl flex items-center justify-center text-indigo-500">
-                                <IconBook />
+                            <div className="w-32 h-32 md:w-48 md:h-48 rounded-full border-[8px] border-white shadow-xl flex items-center justify-center bg-white overflow-hidden">
+                                <img src="https://duk.tw/AqiGxS.png" alt="區塊勢 Logo" className="w-full h-full object-cover" />
                             </div>
                             <div className="flex gap-4 w-full justify-center">
                                 <div className="p-4 bg-white rounded-2xl border border-slate-200 text-center min-w-[120px] shadow-sm">
-                                    <p className="text-sm text-slate-500 font-bold">訂閱制月費</p>
+                                    <p className="text-sm text-slate-500 font-bold mb-1">月費</p>
                                     <p className="text-xl md:text-2xl font-bold text-slate-800">10 USD</p>
                                 </div>
                                 <div className="p-4 bg-white rounded-2xl border border-slate-200 text-center min-w-[120px] shadow-sm">
-                                    <p className="text-sm text-slate-500 font-bold">訂閱制年費</p>
+                                    <p className="text-sm text-slate-500 font-bold mb-1">年費</p>
                                     <p className="text-xl md:text-2xl font-bold text-slate-800">100 USD</p>
                                 </div>
                             </div>
