feat: 更新投影片內容
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -213,19 +213,19 @@
                 ),
                 rightContent: (
                     <div className="h-full flex flex-col justify-center">
-                        <div className="bg-white p-6 md:p-10 rounded-3xl shadow-sm border border-slate-100">
-                            <ul className="space-y-10 md:space-y-12">
+                        <div className="bg-white p-6 md:p-8 rounded-3xl shadow-sm border border-slate-100">
+                            <ul className="space-y-6 md:space-y-8 text-xl md:text-2xl text-slate-800 font-bold">
                                 <li className="flex items-center">
-                                    <span className="text-amber-500 mr-5 font-bold text-3xl md:text-5xl leading-none">🤔</span>
-                                    <strong className="text-slate-800 text-2xl md:text-4xl block font-bold">價值從哪來？</strong>
+                                    <span className="text-amber-500 mr-4 text-2xl md:text-3xl leading-none">🤔</span>
+                                    <span>價值從哪來？</span>
                                 </li>
                                 <li className="flex items-center">
-                                    <span className="text-amber-500 mr-5 font-bold text-3xl md:text-5xl leading-none">📈</span>
-                                    <strong className="text-slate-800 text-2xl md:text-4xl block font-bold">還能挖多久？</strong>
+                                    <span className="text-amber-500 mr-4 text-2xl md:text-3xl leading-none">📈</span>
+                                    <span>還能挖多久？</span>
                                 </li>
                                 <li className="flex items-center">
-                                    <span className="text-amber-500 mr-5 font-bold text-3xl md:text-5xl leading-none">💡</span>
-                                    <strong className="text-slate-800 text-2xl md:text-4xl block font-bold">有什麼應用？</strong>
+                                    <span className="text-amber-500 mr-4 text-2xl md:text-3xl leading-none">💡</span>
+                                    <span>有什麼應用？</span>
                                 </li>
                             </ul>
                         </div>
