--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 content: (
                     <div className="flex flex-col md:flex-row gap-6 md:gap-10 h-full justify-center items-center">
                         <div className="flex-shrink-0">
-                            <img src="https://duk.tw/3vKPbT.jpg" alt="許明恩" className="w-32 md:w-44 h-auto max-h-[420px] rounded-2xl object-contain shadow-lg border-2 border-slate-200" />
+                            <img src="https://i.urusai.cc/RW2O0.jpeg" alt="許明恩" className="w-32 md:w-44 h-auto max-h-[420px] rounded-2xl object-contain shadow-lg border-2 border-slate-200" />
                         </div>
                         <div className="space-y-6 flex-1">
                             <div className="p-4 bg-amber-50 rounded-xl border border-amber-100">
@@ -104,7 +104,7 @@
                 rightClasses: "md:w-[45%]",
                 leftContent: (
                     <div className="w-full h-full min-h-[300px] bg-slate-100 rounded-2xl border-2 border-slate-200 flex items-center justify-center overflow-hidden p-2">
-                        <img src="https://duk.tw/suK7fD.png" alt="以太坊礦機" className="w-full h-full object-contain rounded-xl drop-shadow-sm" />
+                        <img src="https://l.urusai.cc/kNqGa.png" alt="以太坊礦機" className="w-full h-full object-contain rounded-xl drop-shadow-sm" />
                     </div>
                 ),
                 rightContent: (
@@ -202,7 +202,7 @@
                 rightClasses: "md:w-[40%]",
                 leftContent: (
                     <a href="https://bitcoin.org/bitcoin.pdf" target="_blank" rel="noopener noreferrer" className="w-full h-full min-h-[300px] md:min-h-[400px] bg-slate-100 rounded-3xl border-2 border-slate-200 flex items-center justify-center p-4 transition-transform hover:scale-[1.01] shadow-sm hover:shadow-md cursor-pointer relative group block">
-                        <img src="https://duk.tw/YrkB9K.png" alt="比特幣白皮書" className="w-full h-full object-contain rounded-xl drop-shadow-sm" />
+                        <img src="https://i.urusai.cc/RQyub.png" alt="比特幣白皮書" className="w-full h-full object-contain rounded-xl drop-shadow-sm" />
                         <div className="absolute inset-0 bg-slate-900/5 rounded-3xl opacity-0 group-hover:opacity-100 transition-opacity flex items-center justify-center">
                             <span className="bg-white/95 text-slate-800 px-6 py-3 rounded-full font-bold shadow-lg backdrop-blur-sm text-sm flex items-center gap-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2.5" strokeLinecap="round" strokeLinejoin="round"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/><polyline points="15 3 21 3 21 9"/><line x1="10" y1="14" x2="21" y2="3"/></svg>
@@ -253,7 +253,7 @@
                         {/* 右側：視覺與訂閱資訊 */}
                         <div className="flex flex-col items-center justify-center space-y-8">
                             <div className="w-32 h-32 md:w-48 md:h-48 rounded-full border-[8px] border-white shadow-xl flex items-center justify-center bg-white overflow-hidden">
-                                <img src="https://duk.tw/AqiGxS.png" alt="區塊勢 Logo" className="w-full h-full object-cover" />
+                                <img src="https://i.urusai.cc/Eb0Bw.png" alt="區塊勢 Logo" className="w-full h-full object-cover" />
                             </div>
                             <div className="flex gap-4 w-full justify-center">
                                 <div className="p-4 bg-white rounded-2xl border border-slate-200 text-center min-w-[120px] shadow-sm">
