--- a/index.html
+++ b/index.html
@@ -274,10 +274,10 @@
                 layout: 'timeline',
                 title: "流程",
                 steps: [
-                    { phase: "Part 1", title: "Web3 金流基礎建設", desc: "錢包實戰與私鑰管理、加密貨幣收發體驗", icon: <IconWallet /> },
-                    { phase: "Part 2", title: "重大風險與資安拆解", desc: "交易授權陷阱分析、交易所與駭客案例", icon: <IconShield /> },
-                    { phase: "Part 3", title: "鏈上金流與獲利邏輯", desc: "DeFi 與穩定幣套利、資金流向追蹤判讀", icon: <IconChart /> },
-                    { phase: "Part 4", title: "Web3 商業應用", desc: "跨境支付與穩定幣結算、支付卡與鏈上隱私工具", icon: <IconWallet /> }
+                    { phase: "Part 1", title: "價值從無到有", desc: "比特幣與共識機制、挖礦與數位資產的誕生", icon: <IconBitcoin /> },
+                    { phase: "Part 2", title: "數位透明世界", desc: "區塊鏈不可竄改、鏈上查詢與透明金流", icon: <IconChart /> },
+                    { phase: "Part 3", title: "鏈上金融應用", desc: "DeFi、穩定幣與智能合約，鏈上金流實戰", icon: <IconCoins /> },
+                    { phase: "Part 4", title: "從金融到經濟", desc: "代幣經濟、商業應用與跨境支付展望", icon: <IconWallet /> }
                 ]
             },
             {
