style: 第四頁四張卡片改為白底
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -172,44 +172,44 @@
                             {/* 卡片層 */}
                             <div className="flex flex-col md:flex-row w-full items-center justify-between gap-4 z-10 relative">
                                 {/* 1. 礦機 */}
-                                <div className="flex flex-col items-center justify-center p-4 md:p-6 bg-slate-900 rounded-3xl border-2 border-slate-700 w-full md:w-[22%] aspect-[4/3] md:aspect-square relative z-10 shadow-sm transition-transform hover:-translate-y-2 overflow-hidden">
+                                <div className="flex flex-col items-center justify-center p-4 md:p-6 bg-white rounded-3xl border-2 border-slate-200 w-full md:w-[22%] aspect-[4/3] md:aspect-square relative z-10 shadow-sm transition-transform hover:-translate-y-2 overflow-hidden">
                                     <div className="flex-1 w-full min-h-0 flex items-center justify-center">
                                         <img src="https://i.urusai.cc/as1VT.png" alt="礦機" className="w-full h-full object-contain" />
                                     </div>
-                                    <p className="font-bold text-lg md:text-xl text-white tracking-wide text-center flex-shrink-0 pt-2">礦機運作</p>
+                                    <p className="font-bold text-lg md:text-xl text-slate-800 tracking-wide text-center flex-shrink-0 pt-2">礦機運作</p>
                                 </div>
                                 
                                 <span className="text-3xl text-slate-300 font-bold hidden md:block">→</span>
                                 <span className="text-3xl text-slate-300 font-bold md:hidden">↓</span>
 
                                 {/* 2. ETH */}
-                                <div className="flex flex-col items-center justify-center p-4 md:p-6 bg-slate-900 rounded-3xl border-2 border-slate-700 w-full md:w-[22%] aspect-[4/3] md:aspect-square relative z-10 shadow-sm transition-transform hover:-translate-y-2 overflow-hidden">
+                                <div className="flex flex-col items-center justify-center p-4 md:p-6 bg-white rounded-3xl border-2 border-slate-200 w-full md:w-[22%] aspect-[4/3] md:aspect-square relative z-10 shadow-sm transition-transform hover:-translate-y-2 overflow-hidden">
                                     <div className="flex-1 w-full min-h-0 flex items-center justify-center">
                                         <img src="https://i.urusai.cc/TI6Y0.png" alt="賺得 ETH" className="w-full h-full object-contain" />
                                     </div>
-                                    <p className="font-bold text-lg md:text-xl text-white tracking-wide text-center flex-shrink-0 pt-2">賺得 ETH</p>
+                                    <p className="font-bold text-lg md:text-xl text-slate-800 tracking-wide text-center flex-shrink-0 pt-2">賺得 ETH</p>
                                 </div>
 
                                 <span className="text-3xl text-slate-300 font-bold hidden md:block">→</span>
                                 <span className="text-3xl text-slate-300 font-bold md:hidden">↓</span>
 
                                 {/* 3. 交易所 */}
-                                <div className="flex flex-col items-center justify-center p-4 md:p-6 bg-slate-900 rounded-3xl border-2 border-slate-700 w-full md:w-[22%] aspect-[4/3] md:aspect-square relative z-10 shadow-sm transition-transform hover:-translate-y-2 overflow-hidden">
+                                <div className="flex flex-col items-center justify-center p-4 md:p-6 bg-white rounded-3xl border-2 border-slate-200 w-full md:w-[22%] aspect-[4/3] md:aspect-square relative z-10 shadow-sm transition-transform hover:-translate-y-2 overflow-hidden">
                                     <div className="flex-1 w-full min-h-0 flex items-center justify-center">
                                         <img src="https://i.urusai.cc/nrheR.png" alt="交易所" className="w-full h-full object-contain" />
                                     </div>
-                                    <p className="font-bold text-lg md:text-xl text-white tracking-wide text-center flex-shrink-0 pt-2">交易所</p>
+                                    <p className="font-bold text-lg md:text-xl text-slate-800 tracking-wide text-center flex-shrink-0 pt-2">交易所</p>
                                 </div>
 
                                 <span className="text-3xl text-slate-300 font-bold hidden md:block">→</span>
                                 <span className="text-3xl text-slate-300 font-bold md:hidden">↓</span>
 
                                 {/* 4. 電費 */}
-                                <div className="flex flex-col items-center justify-center p-4 md:p-6 bg-slate-900 rounded-3xl border-2 border-slate-700 w-full md:w-[22%] aspect-[4/3] md:aspect-square relative z-10 shadow-sm transition-transform hover:-translate-y-2 overflow-hidden">
+                                <div className="flex flex-col items-center justify-center p-4 md:p-6 bg-white rounded-3xl border-2 border-slate-200 w-full md:w-[22%] aspect-[4/3] md:aspect-square relative z-10 shadow-sm transition-transform hover:-translate-y-2 overflow-hidden">
                                     <div className="flex-1 w-full min-h-0 flex items-center justify-center">
                                         <img src="https://i.urusai.cc/YRgOs.png" alt="付台電帳單" className="w-full h-full object-contain" />
                                     </div>
-                                    <p className="font-bold text-lg md:text-xl text-white tracking-wide text-center flex-shrink-0 pt-2">付台電帳單</p>
+                                    <p className="font-bold text-lg md:text-xl text-slate-800 tracking-wide text-center flex-shrink-0 pt-2">付台電帳單</p>
                                 </div>
                             </div>
 
