fix: 第11頁銀行與買家圖片對調
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                             {/* 中：銀行（中間人） */}
                             <div className="flex flex-col items-center w-full md:w-[36%] flex-shrink-0">
                                 <div className="w-full max-w-[200px] aspect-square rounded-2xl border-2 border-slate-300 bg-white shadow-md overflow-hidden flex items-center justify-center p-2">
-                                    <img src="https://i.urusai.cc/z7gGr.png" alt="銀行（中間人）" className="w-full h-full object-contain" />
+                                    <img src="https://i.urusai.cc/VPGPL.png" alt="銀行（中間人）" className="w-full h-full object-contain" />
                                 </div>
                                 <p className="font-bold text-slate-800 mt-3 text-lg">銀行（中間人）</p>
                             </div>
@@ -440,7 +440,7 @@
                             {/* 右：買家 */}
                             <div className="flex flex-col items-center w-full md:w-[28%] flex-1">
                                 <div className="w-full max-w-[180px] aspect-square rounded-2xl border-2 border-slate-200 bg-white shadow-sm overflow-hidden flex items-center justify-center p-2">
-                                    <img src="https://i.urusai.cc/VPGPL.png" alt="買家" className="w-full h-full object-contain" />
+                                    <img src="https://i.urusai.cc/z7gGr.png" alt="買家" className="w-full h-full object-contain" />
                                 </div>
                                 <p className="font-bold text-slate-800 mt-3 text-lg">買家</p>
                             </div>
