feat: 第十四頁改為段落分隔「現在發錢最快」，參考第八頁 section 設計
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -503,6 +503,12 @@
             },
             {
                 id: 14,
+                layout: 'section',
+                title: "現在發錢最快",
+                subtitle: "親手發一筆，搞懂加密貨幣怎麼運作"
+            },
+            {
+                id: 15,
                 layout: 'split',
                 title: "區塊鏈 vs 銀行：數位面交與優缺點",
                 leftContent: (
@@ -537,7 +543,7 @@
                 )
             },
             {
-                id: 15,
+                id: 16,
                 layout: 'detail',
                 tag: "幣圈的銅臭味",
                 title: "穩定幣與改寫金融規則",
@@ -569,7 +575,7 @@
                 )
             },
             {
-                id: 16,
+                id: 17,
                 layout: 'detail',
                 tag: "資產代幣化",
                 title: "黃金、股票與 DeFi",
@@ -594,7 +600,7 @@
                 )
             },
             {
-                id: 17,
+                id: 18,
                 layout: 'detail',
                 tag: "常用工具",
                 title: "Visa 卡、錢包與跨境投資",
@@ -621,7 +627,7 @@
                 )
             },
             {
-                id: 18,
+                id: 19,
                 layout: 'split',
                 title: "總結與延伸閱讀",
                 leftContent: (
@@ -656,7 +662,7 @@
                 )
             },
             {
-                id: 19,
+                id: 20,
                 layout: 'cover',
                 title: "感謝聆聽",
                 subtitle: "填問卷，送訂閱",
