fix: 第十三頁標題改為「不靠中間人的資產轉移」、右側比特幣 logo 放大減少留白
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
             {
                 id: 13,
                 layout: 'split',
-                title: "如不靠中間人的資產轉移",
+                title: "不靠中間人的資產轉移",
                 leftContent: (
                     <div className="flex flex-col items-center justify-center h-full">
                         <p className="text-lg text-slate-600 text-center mb-4">2008 年，一套不經中間人的點對點電子現金系統問世 —— 比特幣。</p>
@@ -495,9 +495,9 @@
                     </div>
                 ),
                 rightContent: (
-                    <div className="flex flex-col items-center justify-center h-full">
-                        <img src="https://i.urusai.cc/qqkIa.png" alt="比特幣" className="w-32 h-32 md:w-40 md:h-40 object-contain" />
-                        <p className="text-xl font-bold text-slate-800 mt-4">Bitcoin</p>
+                    <div className="flex flex-col items-center justify-center h-full min-h-0 py-2">
+                        <img src="https://i.urusai.cc/qqkIa.png" alt="比特幣" className="w-48 h-48 md:w-56 md:h-56 lg:w-64 lg:h-64 object-contain flex-shrink-0" />
+                        <p className="text-xl font-bold text-slate-800 mt-3">Bitcoin</p>
                     </div>
                 )
             },
