fix: 第十四頁標題改為「發錢最快」，副標改為強調實際操作與親身感受
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -504,8 +504,8 @@
             {
                 id: 14,
                 layout: 'section',
-                title: "現在發錢最快",
-                subtitle: "親手發一筆，搞懂加密貨幣怎麼運作"
+                title: "發錢最快",
+                subtitle: "實際操作，親身感受加密貨幣如何運作"
             },
             {
                 id: 15,
